@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.45 2004/04/11 10:45:58 h_oudejans Exp $
+$Id: ChangeLog,v 1.46 2004/04/11 20:18:23 h_oudejans Exp $
+
+2004-04-12 Herman Oudejans <hn.oudejans@quicknet.nl>
+	* fixed gtk segfault when starting openmsx.
 
 2004-04-11 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* joystickport devices are now prepluggable.
